Kubernetes/nsEmpire.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: dev-empire
  labels: 
    name: dev-empire
