Kubernetes/deployBack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Back
  namespace: dev-empire
  labels:
    app: back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: backprod
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
