Kubernetes/deployFront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: dev-empire
  labels:
    app: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: frontprod
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
