Kubernetes/Services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontservice
  namespace: dev-empire
  labels:
    app: frontservice
spec:
  type: NodePort
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: backservice
  namespace: dev-empire
  labels:
    app: backservice
spec:
  type: ClusterIP
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
