Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: dev-empire # O cualquier namespace donde quieras colocar el Ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: empire.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontservice
            port:
              number: 80
  - host: back.empire.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backservice
            port:
              number: 80
